--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,9 @@
       "ecmaVersion": 12
     },
     "globals": {
-      "cy": "readonly",      // Adicionado para reconhecer 'cy'
-      "Cypress": "readonly"   // Adicionado para reconhecer 'Cypress'
+    "it": "readonly",
+    "describe": "readonly",
+    "cy": "readonly"
     },
     "rules": {
       "indent": [
