--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -6,6 +6,9 @@
       "cypress/no-force": "error",
       "cypress/assertion-before-screenshot": "error",
       "cypress/no-pause": "error"
-    }
+    },
+    "env": {
+    "cypress/globals": true
+  }
   }
   
