Create e2e tests with cypress

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,16 @@ on:
   pull_request:
 
 jobs:
+  eslint:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install modules
+      run: npm install
+    - name: Run ESLint
+      run: npm run lint
   cypress-tests-desktop:
+    needs: eslint
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -23,6 +32,7 @@ jobs:
         with:
           command: npm run test:cloud
   cypress-tests-tablet:
+    needs: eslint
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
